Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,5 +33,5 @@ steps:
 - task: UiPathDeploy@3
   inputs:
     orchestratorConnection: 'AzureDevopsIntegration'
-    packagesPath: '$(Build.ArtifactStagingDirectory)'
+    packagesPath: '$(Build.ArtifactStagingDirectory)\Output'
     folderName: 'AzureDevops'
