Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ steps:
     projectJsonPath: '$(Build.SourcesDirectory)'
     orchestratorConnection: 'AzureDevopsIntegration'
     outputPath: '$(Build.ArtifactStagingDirectory)\Output'
-
+    runWorkflowAnalysis: true
 - task: UiPathTest@3
   inputs:
     testTarget: 'TestProject'
